--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -9,8 +9,8 @@
 #urlbar[focused="true"] { box-shadow: 0 0 1px #3B99FC inset!important; }
 
 /* last search */
-.cliqz-urlbar-Last-search-container { display: none; /*max-width: 220px; overflow: hidden;*/ }
-/*
+.cliqz-urlbar-Last-search-container { max-width: 220px; overflow: hidden; }
+
 .cliqz-urlbar-Last-search {
     background-size: 14px 10px;
     color: white;
@@ -22,7 +22,7 @@
     max-width: 200px;
     text-overflow: ellipsis;
     overflow: hidden;
-}*/
+}
 
 #cliqz-popup {
     padding: 0;
