--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -1,3 +1,8 @@
 
-/* For entity-generic-history to separate list of history entries from EZ material. */
-#cliqz-results .cliqz-history-results { margin-top: 8px; }
+/* New class: for entity-generic-history to separate list of history entries from EZ material. */
+#cliqz-results .cliqz-history-results { margin-top: 16px; }
+
+/* Overrides corresponding line in browsers.css */
+#cliqz-results .cliqz-pattern-title-h1, #cliqz-results .cliqz-pattern-title-h2, #cliqz-results .cliqz-pattern-title-h3 {
+    margin-bottom: 8px;
+}
