--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -158,7 +158,7 @@
     display: inline-block;
 }
 
-#cliqz-results .cqz-ez-btn:hover, #cliqz-results .cqz-ez-btn[arrow='true'] { background-color: #cccccc !important; }
+/*#cliqz-results .cqz-ez-btn:hover, #cliqz-results .cqz-ez-btn[arrow='true'] { background-color: #cccccc !important; }*/
 #cliqz-results .cqz-vert-center1 { position: absolute; }
 #cliqz-results .cqz-vert-center { position: absolute; top: 50%;	transform: translateY(-49%); }
 #cliqz-results .cqz-image {
@@ -214,10 +214,7 @@
 #cliqz-results .cqz-ez-title:hover { text-decoration: underline; }
 #cliqz-results .cqz-ez-generic-elems, #cliqz-results .cqz-ez-generic-box, #cliqz-results .cqz-ez-generic-opt { height: 132px; }
 #cliqz-results .cqz-ez-generic-box { float: left; }
-#cliqz-results .cqz-ez-generic-box .cqz-ez-btn { background-color: #2fc4fc; display: block; }
-#cliqz-results .cqz-ez-generic-box .cqz-ez-btn:nth-of-type(1) { background-color: #5267a2; }
-#cliqz-results .cqz-ez-generic-box .cqz-ez-btn:nth-of-type(2) { background-color: #1e5cdc; }
-#cliqz-results .cqz-ez-generic-box .cqz-ez-btn:nth-of-type(3) { background-color: #5ea3f9; }
+#cliqz-results .cqz-ez-generic-box .cqz-ez-btn { display: block; }
 #cliqz-results .cqz-ez-generic-opt {
     background-color: #efefef;
     min-width: 130px;
