fixes https://github.com/cliqz/bug-tracker/issues/394

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -304,7 +304,8 @@
     background-color: #3E86FC;
     background-position: right 5px center;
     background-size: 15px 15px;
-    background-image: url(http://cdn.cliqz.com/extension/EZ/search/search-glass-white.svg)
+    background-image: url(http://cdn.cliqz.com/extension/EZ/search/search-glass-white.svg);
+    cursor: pointer;
 }
 
 #cliqz-results .cqz-ez-search-box-input {
