--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -401,6 +401,12 @@
 #cliqz-results .cliqz-pattern-title-h1, #cliqz-results .cliqz-pattern-title-h2, #cliqz-results .cliqz-pattern-title-h3 {
     margin-bottom: 14px;
 }
+#cliqz-results .cliqz-pattern-title-h1, #cliqz-results .cliqz-pattern-title-h3 {
+    cursor: default;
+}
+#cliqz-results .cliqz-pattern-title-h1:hover, #cliqz-results .cliqz-pattern-title-h3:hover {
+    text-decoration: none;
+}
 #cliqz-results .cliqz-pattern-title-h1::after, #cliqz-results .cliqz-pattern-title-h2::after, #cliqz-results .cliqz-pattern-title-h3::after {
     background-image: url(chrome://cliqzres/content/skin/history_document.png);
 }
