fix keyboard navigation in hybrid EZones and multiple EZones

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -70,6 +70,7 @@
 }
 #cliqz-results .transition { -moz-transition: all 0.3s ease; transition: all 0.3s ease; }
 #cliqz-results .nopadding { padding: 0 }
+#cliqz-results .cqz-result-padding { padding: 16px 22px; box-sizing: border-box; }
 #cliqz-results .cqz-result-h1 { height: 302px; }
 #cliqz-results .cqz-result-h2 { height: 201px; }
 #cliqz-results .cqz-result-h3 {	height: 100px; }
@@ -402,7 +403,7 @@
 #cliqz-results .ez-weather .cqz-result-h2 { position: relative }
 
 /* history */
-#cliqz-results .cqz-result-pattern { padding: 16px 22px; box-sizing: border-box; }
+#cliqz-results .cqz-result-pattern { }
 #cliqz-results .cliqz-pattern-title-h1, #cliqz-results .cliqz-pattern-title-h2, #cliqz-results .cliqz-pattern-title-h3 {
     margin-bottom: 14px;
 }
