--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -10,3 +10,25 @@
 #cliqz-results .cliqz-pattern-title-h1, #cliqz-results .cliqz-pattern-title-h2, #cliqz-results .cliqz-pattern-title-h3 {
     margin-bottom: 8px;
 }
+
+
+/* ------- FLIGHT STATUS EZ thuy@cliqz.com*/
+#cliqz-results .flightStatusEZ-flightNumber {color:#333333; font-size: 18px; overflow: hidden;}
+#cliqz-results .flightStatusEZ-flightStatus {color:#C9C9C9; font-size: 12px;}
+
+#cliqz-results .flightStatusEZ-plane-position{height: 38px}
+#cliqz-results .flightStatusEZ-plane-position-plane-img {float:left; width: 30px; margin-top:7px; margin-right: 5px;}
+#cliqz-results .flightStatusEZ-plane-position-bar { overflow: hidden; height: 10px; float:left; max-width: 338px; width: calc(100% - 35px); margin-top:15px;}
+#cliqz-results .flightStatusEZ-plane-position-dot { overflow: visible; width: 10px; height: 10px; background: #74d463; position: relative; z-index: 2; left: 0%; border-radius: 50%;}
+#cliqz-results .flightStatusEZ-plane-position-dot::after,  .flightStatusEZ-plane-position-dot::before{ content: ""; width: 99999px; height: 2px; background: #C9C9C9; display: block; position: absolute; top: 4px; z-index: 1;}
+#cliqz-results .flightStatusEZ-plane-position-dot::before { right: 0; background: #74d463; z-index: 3;}
+
+
+#cliqz-results .flightStatusEZ-depart-arrival{color:#999999; clear:left; font-size:14px; max-width: 420px;}
+#cliqz-results .flightStatusEZ-depart-arrival-name{color:#333333}
+#cliqz-results .flightStatusEZ-depart,  .flightStatusEZ-arrival{ float:left; width:auto; max-width:calc(50% - 5px);overflow: hidden}
+#cliqz-results .flightStatusEZ-arrival{float:right}
+#cliqz-results .flightStatusEZ-depart-arrival-name{color:#333333}
+
+/* ------- END FLIGHT STATUS EZ thuy@cliqz.com*/
+
