--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -18,7 +18,7 @@
 
 #cliqz-results .flightStatusEZ-plane-position{height: 38px}
 #cliqz-results .flightStatusEZ-plane-position-plane-img {float:left; width: 30px; margin-top:7px; margin-right: 5px;}
-#cliqz-results .flightStatusEZ-plane-position-bar { overflow: hidden; height: 10px; float:left; max-width: 338px; width: -moz-calc(100% - 35px); margin-top:15px;}
+#cliqz-results .flightStatusEZ-plane-position-bar { overflow: hidden; height: 10px; float:left; max-width: 338px; width: -moz-calc(100% - 35px); margin-top:15px; padding-right: 10px}
 #cliqz-results .flightStatusEZ-plane-position-dot { overflow: visible; width: 10px; height: 10px; background: #74d463; position: relative; z-index: 2; left: 0%; border-radius: 50%;}
 #cliqz-results .flightStatusEZ-plane-position-dot::after,  .flightStatusEZ-plane-position-dot::before{ content: ""; width: 99999px; height: 2px; background: #C9C9C9; display: block; position: absolute; top: 4px; z-index: 1;}
 #cliqz-results .flightStatusEZ-plane-position-dot::before { right: 0; background-color: inherit; z-index: 3;}
